--- a/src/main/scala/com/r/scalademo/wicket/MyHelloPanel.html
+++ b/src/main/scala/com/r/scalademo/wicket/MyHelloPanel.html
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org/dtds.data/wicket-xhtml1.4-strict.dtd">
 <body>
-    <p><span wicket:id="helloWorldLabel"/></p>
-    <p><span wicket:id="helloPanel"/></p>
+<wicket:panel>
+    <p><wicket:message key="nameLabel"/></p>
+    <p><input wicket:id="inputField"/></p>
+    <p><span wicket:id="helloLabel"/></p>
+</wicket:panel>
 </body>
 </html>
