corrected Scala verison | added back link to the page

--- a/src/main/scala/com/r/scalademo/wicket/MyHelloPanel.html
+++ b/src/main/scala/com/r/scalademo/wicket/MyHelloPanel.html
@@ -5,6 +5,9 @@
     <p><wicket:message key="nameLabel"/></p>
     <p><input wicket:id="inputField"/></p>
     <p><span wicket:id="helloLabel"/></p>
+    <br/>
+    <br/>
+    <a href="http://blog.rubezhanskyy.com/2013/wicket-scala-quickstart">Back to the article</a>
 </wicket:panel>
 </body>
 </html>
