--- a/src/main/scala/edu/unq/uis/planificador/wicket/MainPage.html
+++ b/src/main/scala/edu/unq/uis/planificador/wicket/MainPage.html
@@ -4,6 +4,6 @@
         <title>Hello</title>
     </head>
     <body>
-        <h1>Hello world!</h1>
+        <h1 wicket:id="helloWorldLabel">Hello world!</h1>
     </body>
 </html>
