--- a/src/main/scala/edu/unq/uis/planificador/wicket/MainPage.html
+++ b/src/main/scala/edu/unq/uis/planificador/wicket/MainPage.html
@@ -5,5 +5,6 @@
     </head>
     <body>
         <h1 wicket:id="helloWorldLabel">Hello world!</h1>
+        <div wicket:id="detallePanel">Hello world!</div>
     </body>
 </html>
