Ejemplo funcionando de la tabla editable... me volvi puto haciendolo andar...

--- a/src/main/scala/edu/unq/uis/planificador/wicket/MainPage.html
+++ b/src/main/scala/edu/unq/uis/planificador/wicket/MainPage.html
@@ -6,5 +6,6 @@
     <body>
         <h1 wicket:id="helloWorldLabel">Hello world!</h1>
         <div wicket:id="detallePanel">Hello world!</div>
+        <div wicket:id="grid" border="1"></div>
     </body>
 </html>
