Ejemplo funcionando de la tabla editable... me volvi puto haciendolo andar...

--- a/src/main/scala/edu/unq/uis/planificador/wicket/MainPage.html
+++ b/src/main/scala/edu/unq/uis/planificador/wicket/MainPage.html
@@ -1,11 +1,10 @@
 <!doctype html>
 <html xmlns='http://www.w3.org/1999/xhtml' xmlns:wicket='http://wicket.apache.org/dtds.data/wicket-xhtml1.4-strict.dtd'>
     <head>
-        <title>Hello</title>
+        <title>Planificador</title>
     </head>
     <body>
-        <h1 wicket:id="helloWorldLabel">Hello world!</h1>
-        <div wicket:id="detallePanel">Hello world!</div>
+        <div wicket:id="detallePanel"></div>
         <div wicket:id="grid" border="1"></div>
     </body>
 </html>
