Se pueden editar empleados y sus campos

--- a/src/main/scala/edu/unq/uis/planificador/wicket/MainPage.html
+++ b/src/main/scala/edu/unq/uis/planificador/wicket/MainPage.html
@@ -4,7 +4,7 @@
         <title>Planificador</title>
     </head>
     <body>
-        <div wicket:id="detallePanel"></div>
+        <!--<div wicket:id="detallePanel"></div>-->
         <div wicket:id="grid" border="1"></div>
     </body>
 </html>
