Se puede ver las disponibilidades de cada empleado

--- a/src/main/scala/edu/unq/uis/planificador/wicket/MainPage.html
+++ b/src/main/scala/edu/unq/uis/planificador/wicket/MainPage.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html xmlns='http://www.w3.org/1999/xhtml' xmlns:wicket='http://wicket.apache.org/dtds.data/wicket-xhtml1.4-strict.dtd'>
-    <head>
-        <title>Planificador</title>
-    </head>
-    <body>
-        <!--<div wicket:id="detallePanel"></div>-->
-        <div wicket:id="grid" border="1"></div>
-    </body>
+<html xmlns:wicket='http://wicket.apache.org/dtds.data/wicket-xhtml1.4-strict.dtd' xmlns='http://www.w3.org/1999/xhtml'>
+<head>
+    <title>Planificador</title>
+</head>
+<body>
+<div wicket:id="grid" border="1"></div>
+<div wicket:id="disponibilidades"></div>
+</body>
 </html>
