--- a/src/main/scala/edu/unq/uis/planificador/wicket/MainPage.html
+++ b/src/main/scala/edu/unq/uis/planificador/wicket/MainPage.html
@@ -19,7 +19,11 @@
             <h3 class="panel-title" wicket:id="empleadoSeleccionado.nombreCompleto">Juan Perez</h3>
         </div>
         <div class="panel-body">
-            <div wicket:id="disponibilidades"></div>
+          <div class="container">
+            <div class="row">
+              <div wicket:id="disponibilidades" class="col-md-6"></div>
+            </div>
+          </div>
         </div>
     </div>
 </form>
