--- a/src/main/scala/edu/unq/uis/planificador/wicket/MainPage.html
+++ b/src/main/scala/edu/unq/uis/planificador/wicket/MainPage.html
@@ -4,28 +4,32 @@
     <title>Planificador</title>
 </head>
 <body>
-<form wicket:id="buscadorEmpleados">
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <h3 class="panel-title">Empleados</h3>
-        </div>
-        <div class="panel-body">
-            <div wicket:id="grid"></div>
-        </div>
-    </div>
+<form wicket:id="buscadorEmpleados" class="container">
+  <div wicket:id="grid"></div>
 
-    <div class="panel panel-default">
+  <div class="jumbotron">
+    <h3 wicket:id="empleadoSeleccionado.nombreCompleto">Juan Perez</h3>
+
+    <div class="row">
+      <div class="panel panel-default col-md-7">
         <div class="panel-heading">
-            <h3 class="panel-title" wicket:id="empleadoSeleccionado.nombreCompleto">Juan Perez</h3>
+          <h3 class="panel-title">Disponibilidades</h3>
         </div>
         <div class="panel-body">
-          <div class="container">
-            <div class="row">
-              <div wicket:id="disponibilidades" class="col-md-6"></div>
-            </div>
-          </div>
+          <div wicket:id="disponibilidades"></div>
         </div>
+      </div>
+
+      <div class="panel panel-default col-md-4 col-md-offset-1">
+        <div class="panel-heading">
+          <h3 class="panel-title">Restricciones</h3>
+        </div>
+        <div class="panel-body">
+          <div wicket:id="restricciones"></div>
+        </div>
+      </div>
     </div>
+  </div>
 </form>
 </body>
 </html>
