--- a/src/main/scala/edu/unq/uis/planificador/wicket/widgets/grid/columns/EditableGridCustomActionPanel.html
+++ b/src/main/scala/edu/unq/uis/planificador/wicket/widgets/grid/columns/EditableGridCustomActionPanel.html
@@ -1,7 +1,5 @@
 <wicket:panel>
-  <div>
-    <a wicket:id="link" href="#">
-      <wicket:container wicket:id="label" />
-    </a>
-  </div>
+    <div>
+        <a wicket:id="link" href="#"></a>
+    </div>
 </wicket:panel>
