--- a/src/main/scala/edu/unq/uis/planificador/wicket/empleado/EmpleadosPage.html
+++ b/src/main/scala/edu/unq/uis/planificador/wicket/empleado/EmpleadosPage.html
@@ -1,29 +1,32 @@
 <wicket:extend>
-  <form wicket:id="buscadorEmpleados">
-    <div wicket:id="grid"></div>
+    <div class="container">
 
-    <div class="jumbotron">
-      <h3 wicket:id="empleadoSeleccionado.nombreCompleto">Juan Perez</h3>
+        <form wicket:id="buscadorEmpleados">
+            <div wicket:id="grid"></div>
 
-      <div class="row">
-        <div class="panel panel-default col-md-7">
-          <div class="panel-heading">
-            <h3 class="panel-title">Disponibilidades</h3>
-          </div>
-          <div class="panel-body">
-            <div wicket:id="disponibilidades"></div>
-          </div>
-        </div>
+            <div class="jumbotron">
+                <h3 wicket:id="empleadoSeleccionado.nombreCompleto">Juan Perez</h3>
 
-        <div class="panel panel-default col-md-4 col-md-offset-1">
-          <div class="panel-heading">
-            <h3 class="panel-title">Restricciones</h3>
-          </div>
-          <div class="panel-body">
-            <div wicket:id="restricciones"></div>
-          </div>
-        </div>
-      </div>
+                <div class="row">
+                    <div class="panel panel-default col-md-7">
+                        <div class="panel-heading">
+                            <h3 class="panel-title">Disponibilidades</h3>
+                        </div>
+                        <div class="panel-body">
+                            <div wicket:id="disponibilidades"></div>
+                        </div>
+                    </div>
+
+                    <div class="panel panel-default col-md-4 col-md-offset-1">
+                        <div class="panel-heading">
+                            <h3 class="panel-title">Restricciones</h3>
+                        </div>
+                        <div class="panel-body">
+                            <div wicket:id="restricciones"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </form>
     </div>
-  </form>
 </wicket:extend>
