--- a/src/main/scala/edu/unq/uis/planificador/wicket/planificacion/PlanificacionesPage.html
+++ b/src/main/scala/edu/unq/uis/planificador/wicket/planificacion/PlanificacionesPage.html
@@ -1,30 +1,33 @@
 <wicket:extend>
-  <form wicket:id="buscador">
-    <table wicket:id="grid"></table>
+    <div class="container-fluid">
+        <form wicket:id="buscador">
+            <div class="col-md-2">
+                <table wicket:id="grid"></table>
+            </div>
 
-      <div class="jumbotron">
-          <h3 wicket:id="planificacionSeleccionada.fecha">Martes 25/07</h3>
+            <div class="col-md-10">
+                <h3 wicket:id="planificacionSeleccionada.fecha">Martes 25/07</h3>
 
-          <div class="row">
-              <div class="panel panel-default col-md-7">
-                  <div class="panel-heading">
-                      <h3 class="panel-title">Horarios</h3>
-                  </div>
-                  <div class="panel-body">
-                      <div wicket:id="horarios"></div>
-                  </div>
-              </div>
+                <div class="row">
+                    <div class="panel panel-default col-md-7">
+                        <div class="panel-heading">
+                            <h3 class="panel-title">Horarios</h3>
+                        </div>
+                        <div class="panel-body">
+                            <div wicket:id="horarios"></div>
+                        </div>
+                    </div>
 
-              <!--<div class="panel panel-default col-md-4 col-md-offset-1">-->
-              <!--<div class="panel-heading">-->
-              <!--<h3 class="panel-title">Restricciones</h3>-->
-              <!--</div>-->
-              <!--<div class="panel-body">-->
-              <!--<div wicket:id="restricciones"></div>-->
-              <!--</div>-->
-              <!--</div>-->
-          </div>
-      </div>
-  </form>
-
+                    <!--<div class="panel panel-default col-md-4 col-md-offset-1">-->
+                    <!--<div class="panel-heading">-->
+                    <!--<h3 class="panel-title">Restricciones</h3>-->
+                    <!--</div>-->
+                    <!--<div class="panel-body">-->
+                    <!--<div wicket:id="restricciones"></div>-->
+                    <!--</div>-->
+                    <!--</div>-->
+                </div>
+            </div>
+        </form>
+    </div>
 </wicket:extend>
