--- a/src/main/scala/edu/unq/uis/planificador/wicket/planificacion/PlanificacionesPage.html
+++ b/src/main/scala/edu/unq/uis/planificador/wicket/planificacion/PlanificacionesPage.html
@@ -9,13 +9,16 @@
                 <h3 wicket:id="planificacionSeleccionada.fecha">Martes 25/07</h3>
 
                 <div class="row">
-                    <div class="panel panel-default col-md-7">
+                    <div class="panel panel-default col-md-3">
                         <div class="panel-heading">
                             <h3 class="panel-title">Horarios</h3>
                         </div>
                         <div class="panel-body">
                             <div wicket:id="horarios"></div>
                         </div>
+                    </div>
+                    <div class="col-md-9">
+                        <table wicket:id="turnos"></table>
                     </div>
 
                     <!--<div class="panel panel-default col-md-4 col-md-offset-1">-->
