Empleados asignables sin terminar

--- a/src/main/scala/edu/unq/uis/planificador/wicket/planificacion/NuevaAsignacionModal.html
+++ b/src/main/scala/edu/unq/uis/planificador/wicket/planificacion/NuevaAsignacionModal.html
@@ -8,4 +8,5 @@
 
         <input type="submit" wicket:id="buscar" value="Buscar"></input>
     </form>
+    <table wicket:id="resultados"></table>
 </wicket:extend>
